# storage/api-docs/api-docs.json
@@ -20,6 +20,10 @@
         {
             "url": "http://app.dev.atos242.com:8000/api",
             "description": "APP Tenant Atos242 App - Development API Server"
+        },
+        {
+            "url": "http://www.atos242.local:8080/api",
+            "description": "Central Atos242 App - Local API Server - With RP"
         }
     ],
     "paths": {
@@ -113,6 +117,10 @@
                                             "tenant_id": {
                                                 "type": "integer",
                                                 "example": "ibrr"
+                                            },
+                                            "plan_id": {
+                                                "type": "integer",
+                                                "example": 1
                                             },
                                             "name": {
                                                 "type": "string",
